// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: ChangePlanPage should not render form if not allowed to change plan 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Back to billing",
      "to": "/account/billing",
    }
  }
  empty={Object {}}
>
  <PendingPlanBanner
    account={Object {}}
  />
</Page>
`;

exports[`Page: ChangePlanPage should render form if allowed to change plan 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Back to billing",
      "to": "/account/billing",
    }
  }
  empty={Object {}}
>
  <PendingPlanBanner
    account={Object {}}
  />
  <withRouter(Connect(ReduxForm)) />
</Page>
`;
